[package]
name = "varlink-http-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["ws"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
varlink = { version = "13.0", features = ["tokio"] }
varlink_parser = "6.0.0"
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["color", "humantime"] }
argh = "0.1"
# not using full regex as it adds more bloat and our requirements are minimal
regex-lite = "0.1"
tungstenite = { version = "0.28", features = ["native-tls"] }
rustix = { version = "1.0", features = ["event"] }

[dev-dependencies]
tempfile = "3.10"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
test-with = { version = "0.14", default-features = false, features = ["runtime"] }
scopeguard = "1.2"
gethostname = "1.1.0"
tokio-tungstenite = { version = "0.28" }
futures-util = { version = "0.3" }
